# ttlcd-cpp

./: CMakeLists.txt  PKGBUILD  README.htm  README.html  README.md  README.nd  control  main.cpp  makefile  release.yml  ttlcd  ttlcd.spec
.github/workflows/: release.yml
config/: config.example.json  config.json  config.line-demo.json  config.sensors-full.json
docs/: index.htm
packaging/arch/: PKGBUILD
packaging/debian/: 99-ttlcd.rules  control  postinst  postrm  prerm  ttlcd.default.json  ttlcd.service  ttlcd.sysusers
packaging/rpm/: ttlcd.spec
pkg/DEBIAN/: control
scripts/: embed_font.py
src/: CpuUtilization.cpp  CpuUtilization.hpp  EmbeddedFont.hpp  LCDController.cpp  LCDController.hpp  Layout.cpp  Layout.hpp  TempDir.cpp  TempDir.hpp  TempUnits.hpp  Version.hpp  Widget.cpp  Widget.hpp  config.example.json
